fixed visibility of nav buttons in mobile mode

--- a/css/menu.css
+++ b/css/menu.css
@@ -14,7 +14,7 @@ adding/removing the class to the nav tag
 	/* show it*/
     visibility: visible;    
     /* increase height from zerop to needed height */
-    height: 200px;  
+    height: 240px;  
 }
 
 /*
